--- a/Lab2/author.html
+++ b/Lab2/author.html
@@ -21,6 +21,6 @@
     <!---->
     <img src="C:\Users\MVV18\Documents\GitHub\web_basics\Lab2_HTML\photo_2024-09-28_11-10-26.jpg" width="1000" height="800">
     <img src = "https://upload.wikimedia.org/wikipedia/commons/b/ba/Home_icon_orange.png" width ="32" height="32">
-    <a href="file:///C:/Users/MVV18/Documents/GitHub/web_basics/Lab2_HTML/index.html">Посилання на головну сторінку</a>
+    <a href="С:/Users/MVV18/Documents/GitHub/web_basics/Lab2_HTML/index.html">Посилання на головну сторінку</a>
   </body>
 </html>
