--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -6,7 +6,7 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
-    <h1 id="h1" class = "uppercase-text"> Лабораторна робота №5: селектори</h1>
+    <h1 id="h1" > Лабораторна робота №5: селектори</h1>
     <p class="bold">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -54,11 +54,13 @@
       <li><a href="file3.docx">Файл для завантаження 3</a></li>
       <li><a href="file4.docx">Файл для завантаження 4</a></li>
       <li><a href="file5.pdf">Файл для завантаження 5</a></li>
+      <li><a href="file6.docx">Файл для завантаження 3</a></li>
+      <li><a href="file7.pdf">Файл для завантаження 5</a></li>
     </ol>
 
     <p class="blue-border">Написати <a href="mailto:student@student.uzhnu.edu.ua">нам листа</a></p>
     <p>
-      За посиланням нижче ви можете переглянути<strong>відомості про нашу компанію:</strong>
+      За посиланням нижче ви можете переглянути <strong>відомості про нашу компанію:</strong>
     </p>
     <a href="about.html">Про нас</a>
   </body>
