--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -10,16 +10,21 @@
       <div>
         <label> Ім'я <input type="name" id="name" name="name" /></label>
       </div>
+
       <br />
+      
       <div>
-        <label for="date">Дата народження </label>
+        <label for="date">Дата народження</label>
         <input type="date" id="date" name="date" />
       </div>
+
       <br />
+
       <div>
-        <label for="email">Електронна пошта </label>
+        <label for="email">Електронна пошта</label>
         <input type="email" id="email" name="email" />
       </div>
+      
       <br />
       <div>
         <label
@@ -28,8 +33,9 @@
         </label>
       </div>
       <br />
-    <!-- <img src="https://picsum.photos/1000/400" <form action="/submit" /> -->
-    <form action="/submit">
+      <img src="https://picsum.photos/1000/400"> 
+
+      <form action="/submit">
       <fieldset>
         <legend>Ваші улюблені напої?</legend>
 
@@ -57,12 +63,7 @@
         <legend>Моя національність</legend>
 
         <label for="ukrainian">
-          <input
-            type="radio"
-            id="ukrainian"
-            name="nationality"
-            value="ukrainian"
-          />
+          <input type="radio" id="ukrainian" name="nationality" value="ukrainian"  />
           Українець </label
         ><br />
 
